--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
   <div class="site-container">
     @include('partials/header.html')
     <main class="main">
-      Hello
-
+      @include('partials/story.html')
+      @include('partials/capabilities.html')
+      @include('partials/touch.html')
+      @include('partials/news.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
