--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       @include('partials/news.html')
     </main>
     @include('partials/footer.html')
-    <!-- @include('html/h1.html') пример include -->
+    @include('partials/modals.html')
   </div>
 </body>
 
